--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
-  "version": 2,
+  "functions": {
+    "api/**/*.js": {
+      "runtime": "vercel-node@14"
+    }
+  },
   "builds": [
     {
       "src": "./api.js",
