--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
-  "functions": {
-    "carspecs-api/**/*.js": {
-      "runtime": "vercel-node@18"
-    }
-  },
+  "version": 2,
   "builds": [
     {
       "src": "./api.js",
@@ -11,9 +7,7 @@
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/"
-    }
+    { "src": "/api/(.*)", "dest": "/api.js" },
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
