--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,9 @@
     }
   ],
   "routes": [
-    { "src": "/api.js/(.*)", "dest": "/api.js" },
-    { "src": "/(.*)", "dest": "/" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
