--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cars-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node api.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "engines": {
