--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "api.js",
   "scripts": {
     "start": "node api.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "vercel-build": "Selam Vercel"
   },
   "engines": {
     "node": "18.x"
